[metadata]
name = self-healing-sig
summary = This repository is for storing documentation and code which relates to the initiatives of OpenStack's Self-healing SIG
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/self-healing-sig/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html
